@@ -1,0 +1,57 @@
+define host{
+	host_name					host1
+	address					192.168.0.1
+}
+
+define host{
+	host_name					host2
+	address					192.168.0.2
+}
+
+define host{
+	host_name					host3
+	address					192.168.0.3
+    hostgroups                    servers
+}
+
+define hostgroup{
+    hostgroup_name                servers
+}
+
+define serviceescalation{
+	host_name					host3
+	service_description			http check
+	contact_groups				all-escalation
+}
+
+define serviceescalation{
+	hostgroup_name				servers
+	service_description			cpu
+	contact_groups				all-escalation
+}
+
+define service{
+	host_name					host1,host2
+	service_description			http check
+	check_command				check_http
+}
+
+define service{
+	host_name					host1,host2
+	service_description			cpu
+	check_command				check_load
+}
+
+define service{
+	host_name					host3
+	service_description			http check
+	contact_groups				all-page
+	check_command				check_http
+}
+
+define service{
+	hostgroup_name				servers
+	service_description			cpu
+	contact_groups				all-page
+	check_command				check_load
+}
