@@ -115,3 +115,4 @@
         - Improve find_object performance.  Thanks to PIRZYK (RT#63803)
         - Allow for nested group membership. Thanks to PIRZYK (RT#63804)
         - Ensure host membership lists are consistent. Thanks to PIRZYK (RT#63808)
+        - Allow for name() method to not be unique on service objects.  Thanks to PIRZYK (RT#63806)
